syntax = "proto3";

service SchedulerService {
	rpc AddWorkerNode(AddWorkerNodeRequest) returns (AddWorkerNodeReply) {}
}

message AddWorkerNodeRequest {
	string serverId = 1;
	string url = 2;
}

message AddWorkerNodeReply {
	bool okay = 1;
}
